# mockturtle

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  InheritanceDogBarking  README.md  appveyor.yml
examples/: CMakeLists.txt  cut_enumeration.cpp  draw.cpp  exdc.cpp  fuzz.cpp  fuzz_abc.cpp  lut_resynthesis.cpp  mighty.cpp  minimize.cpp  stg_mapping.cpp
include/: CMakeLists.txt
include/mockturtle/: endianness.hpp  interface.hpp  mockturtle.hpp  traits.hpp
include/mockturtle/algorithms/: aig_balancing.hpp  aig_resub.hpp  akers_synthesis.hpp  aqfp_resynthesis.hpp  balancing.hpp  bi_decomposition.hpp  cell_window.hpp  circuit_validator.hpp  cleanup.hpp  cnf.hpp  collapse_mapped.hpp  collapse_mapped_sequential.hpp  constant_propagation.hpp  cover.hpp  cover_to_graph.hpp  cut_enumeration.hpp  cut_rewriting.hpp  cut_rewriting2.hpp  davio_decomposition.hpp  debug_network.hpp  decomposition.hpp  dont_cares.hpp  dsd_decomposition.hpp  emap.hpp  equivalence_checking.hpp  equivalence_classes.hpp  exact_mc_synthesis.hpp  exorcism.hpp  explorer.hpp  extract_adders.hpp  extract_linear.hpp  factoring.hpp  fraig.hpp  functional_reduction.hpp  gates_to_nodes.hpp  klut_to_graph.hpp  linear_resynthesis.hpp  lut_mapper.hpp  lut_mapping.hpp  lut_resynthesis.hpp  (+40 more)
include/mockturtle/generators/: arithmetic.hpp  control.hpp  legacy.hpp  majority.hpp  majority_n.hpp  modular_arithmetic.hpp  random_logic_generator.hpp  random_network.hpp  self_dualize.hpp  sorting.hpp
include/mockturtle/io/: aiger_reader.hpp  bench_reader.hpp  blif_reader.hpp  bristol_reader.hpp  cover_to_graph.hpp  dimacs_reader.hpp  genlib_reader.hpp  index_list.hpp  pla_reader.hpp  serialize.hpp  super_reader.hpp  truth_reader.hpp  verilog_reader.hpp  write_aiger.hpp  write_bench.hpp  write_blif.hpp  write_dimacs.hpp  write_dot.hpp  write_patterns.hpp  write_verilog.hpp
include/mockturtle/networks/: abstract_xag.hpp  aig.hpp  aqfp.hpp  block.hpp  box_aig.hpp  buffered.hpp  cover.hpp  crossed.hpp  dont_touch_aig.hpp  events.hpp  generic.hpp  gia.hpp  klut.hpp  mig.hpp  muxig.hpp  sequential.hpp  storage.hpp  tig.hpp  tig_maj.hpp  xag.hpp  xmg.hpp
include/mockturtle/properties/: aqfpcost.hpp  litcost.hpp  mccost.hpp  migcost.hpp  xmgcost.hpp
include/mockturtle/utils/: abc.hpp  abc_resub.hpp  akers_synthesis_combinations.hpp  algorithm.hpp  cost_functions.hpp  cuts.hpp  debugging_utils.hpp  event_crtp.hpp  frontier.hpp  hash_functions.hpp  index_list.hpp  json_utils.hpp  misc.hpp  mixed_radix.hpp  name_utils.hpp  network_cache.hpp  network_utils.hpp  node_map.hpp  progress_bar.hpp  recursive_cost_functions.hpp  sop_utils.hpp  standard_cell.hpp  stopwatch.hpp  string_utils.hpp  struct_library.hpp  super_utils.hpp  tech_library.hpp  truth_table_cache.hpp  window_utils.hpp
include/mockturtle/views/: aqfp_view.hpp  binding_view.hpp  cell_view.hpp  choice_view.hpp  cnf_view.hpp  color_view.hpp  cost_view.hpp  crossing_view.hpp  cut_view.hpp  depth_view.hpp  dont_care_view.hpp  dont_touch_view.hpp  fanout_limit_view.hpp  fanout_view.hpp  fanout_view2.hpp  immutable_view.hpp  mapping_view.hpp  mffc_view.hpp  mph_view.hpp  names_view.hpp  parents_view.hpp  rank_view.hpp  rsfq_view.hpp  slack_view.hpp  topo_view.hpp  window_view.hpp
lib/: CMakeLists.txt
lib/abcesop/: CMakeLists.txt  exor.cpp  exorBits.cpp  exorCubes.cpp  exorLink.cpp  exorList.cpp  exorUtil.cpp
lib/abcesop/eabc/: abc_global.h  abc_namespaces.h  exor.h  vec.h  vecInt.h  vecPtr.h  vecWec.h
lib/abcresub/abcresub/: abc_global.hpp  abcresub.hpp  vec_int.hpp  vec_ptr.hpp  vec_wrd.hpp
lib/abcsat/: CMakeLists.txt  SimpSolver.cpp  satSolver.cpp
lib/abcsat/abc/: abc_global.h  satSolver.h  satVec.h  utilDouble.h
lib/kitty/kitty/: affine.hpp  algorithm.hpp  bit_operations.hpp  cnf.hpp  constructors.hpp  cube.hpp  decomposition.hpp  dynamic_truth_table.hpp  enumeration.hpp  esop.hpp  (+20 more)
lib/nauty/: CMakeLists.txt  makefile  naugstrings.c  nauty.h
test/: CMakeLists.txt  test.cpp  test_networks.hpp  traits.cpp
test/algorithms/: aig_balancing.cpp  akers_synthesis.cpp  balancing.cpp  bi_decomposition.cpp  bill_glucose_compilation_error.cpp  circuit_validator.cpp  cleanup.cpp  cnf.cpp  collapse_mapped.cpp  constant_propagation.cpp  cover.cpp  cover_to_graph.cpp  cut_enumeration.cpp  cut_rewriting.cpp  davio_decomposition.cpp  debug_network.cpp  decomposition.cpp  dsd_decomposition.cpp  emap.cpp  equivalence_classes.cpp  exact_mc_synthesis.cpp  extract_adders.cpp  factoring.cpp  functional_reduction.cpp  gates_to_nodes.cpp  klut_to_graph.cpp  linear_resynthesis.cpp  lut_mapper.cpp  lut_mapping.cpp  map_adders.cpp  mapper.cpp  mig_algebraic_rewriting.cpp  mig_inv_optimization.cpp  mig_inv_propagation.cpp  mig_resyn_engines.cpp  mig_rewrite.cpp  minmc_xags.cpp  miter.cpp  multiphase.cpp  node_resynthesis.cpp  (+14 more)
test/generators/: arithmetic.cpp  control.cpp  majority.cpp  majority_n.cpp  modular_arithmetic.cpp  random_logic_network.cpp  random_network.cpp  self_dualize.cpp  sorting.cpp
test/io/: aiger_reader.cpp  bench_reader.cpp  blif_reader.cpp  cover_to_graph.cpp  genlib_reader.cpp  index_list.cpp  pla_reader.cpp  serialize.cpp  super_reader.cpp  truth_reader.cpp  verilog_reader.cpp  write_aiger.cpp  write_bench.cpp  write_blif.cpp  write_verilog.cpp
test/networks/: abstract_xag.cpp  aig.cpp  aqfp.cpp  block.cpp  buffered.cpp  cover.cpp  crossed.cpp  klut.cpp  mig.cpp  muxig.cpp  sequential.cpp  xag.cpp  xmg.cpp
test/properties/: litcost.cpp  mccost.cpp  xmgcost.cpp
test/utils/: dont_cares.cpp  fronier.cpp  index_list.cpp  mixed_radix.cpp  network_utils.cpp  node_map.cpp  struct_library.cpp  super_utils.cpp  tech_library.cpp  window_utils.cpp
test/views/: aqfp_view.cpp  binding_view.cpp  cell_view.cpp  cnf_view.cpp  color_view.cpp  cost_view.cpp  cut_view.cpp  depth_view.cpp  dont_care_view.cpp  dont_touch_view.cpp  fanout_limit_view.cpp  fanout_view.cpp  mapping_view.cpp  mffc_view.cpp  mph_view.cpp  names_view.cpp  parents_view.cpp  rank_view.cpp  slack_view.cpp  test_view.cpp  topo_view.cpp  window_view.cpp
(+544 files in other folders)
